@@ -4,6 +4,10 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+November 3, 2001
+        filled shape drawing now clips properly [BUG]
+        Rect object correctly compare (==,<,>)
+
 November 2, 2001
 	pygame.time.get_ticks() returns 0 before pygame.init()
 
